리파지토리 url변경.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sg-logger",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "sg-logger for node.js",
   "keywords": [],
-  "author": "hwaranglee <dev@slogup.com>",
-  "repository": { "type": "git", "url": "git://github.com/slogup/sg-logger.git" },
+  "author": "hwaranglee <ceo@slogup.com>",
+  "repository": { "type": "git", "url": "git://github.com/teamslogup/sg-logger.git" },
   "dependencies": {},
   "devDependencies": {
     "mocha": "*",
